# iam-eks-user-mapper

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  README.md  deny.toml  iam-eks-user-mapper-0.1.0.tgz  iam-eks-user-mapper-0.1.2.tgz  iam-eks-user-mapper-0.1.3.tgz  iam-eks-user-mapper-1.0.0.tgz  iam-eks-user-mapper-1.0.1.tgz  iam-eks-user-mapper-1.1.0.tgz  iam-eks-user-mapper-1.1.1.tgz  iam-eks-user-mapper-1.2.1.tgz  iam-eks-user-mapper-1.3.1.tgz  iam-eks-user-mapper-1.4.0.tgz  iam-eks-user-mapper-1.4.1.tgz  iam-eks-user-mapper-1.4.2.tgz  iam-eks-user-mapper-1.5.0.tgz  iam-eks-user-mapper-1.6.0.tgz  index.yaml
.github/workflows/: audit.yml  build.yml  committed.yml  docker-image.yml  helm-chart.yml  spelling.yml
chart/: values.yaml
chart/templates/: deployment.yaml  rbac.yaml
charts/iam-eks-user-mapper/: Chart.yaml  values.yaml
charts/iam-eks-user-mapper/chart/: Chart.yaml
charts/iam-eks-user-mapper/templates/: _helpers.tpl  deployment.yaml
src/: config.rs  errors.rs  main.rs
src/aws/: iam.rs  mod.rs
src/kubernetes/: aws_auth.rs  mod.rs
