[package]
name = "iam-eks-user-mapper"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.31", features = ["derive", "env"] }
humantime = "2.1.0"
serde = "1.0.218"
serde_yaml = "0.9.25"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = "0.7.13"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
thiserror = "2.0.11"

# Kubernetes
kube = { version = "0.98.0", features = ["runtime", "derive", "ws"] }
k8s-openapi = { version = "0.24.0", default-features = false, features = [
  "v1_30",
] }

# AWS
aws-config = "1.5.17"
aws-sdk-iam = "1.63.0"
aws-sdk-sts = "1.61.0"
